...
          />
          <TouchableOpacity
            onPress={handleFilterButtonPress}
            style={[styles.filterButton, { backgroundColor: theme.colors.palette.neutral300 }]}
          >
            <Icon icon="menu" size={20} />
            <Text tx="homeScreen:filters" style={styles.filterButtonText} />
          </TouchableOpacity>
        </View>
        <Animated.View
          style={[
            styles.pullIndicator,
            {
...
              ))}
            </View>
          </View>

          <View style={styles.filterActions}>
            <Button
              tx="homeScreen:reset"
              onPress={handleResetFilters}
              style={styles.filterButton}
            />
            <Button
              tx="homeScreen:apply"
              preset="filled"
              onPress={handleApplyFilters}
              style={styles.filterButton}
            />
          </View>
        </BottomSheetView>
...
